--- a/_includes/default.html
+++ b/_includes/default.html
@@ -19,10 +19,10 @@
 	<![endif]-->
 
 	<!-- Le styles -->
-	<link href="{{ site.BASE_PATH }}/assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link href="{{ site.BASE_PATH }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
-	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
+	<link href="{{ site.base }}/assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="{{ site.base }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<link href="{{ site.base }}/assets/resources/syntax/syntax.css" rel="stylesheet">
+	<link href="{{ site.base }}/assets/css/style.css" rel="stylesheet">
 
 	<!-- Le fav and touch icons -->
 	<!-- Update these with your own images
@@ -60,8 +60,8 @@
 				<i class="fa fa-envelope"></i>
 			</a>
 			{% endif %}
-			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-				<img src="{{site.BASE_PATH}}/assets/ikona.png" class="img-circle" />
+			<a class="navbar-brand" href="{{ site.base }}/">
+				<img src="{{site.base}}/assets/ikona.png" class="img-circle" />
 				{{ site.title }}
 			</a>
 		</div>
