--- a/_includes/default.html
+++ b/_includes/default.html
@@ -69,7 +69,7 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="{{ site.BASE_PATH }}/">Home</a></li>
+				<li class="active"><a href="{{ site.base }}/">Home</a></li>
 				<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}">Podjetja</a></li>
 				<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}">O projektu</a></li>
 			</ul>
