--- a/_includes/default.html
+++ b/_includes/default.html
@@ -60,8 +60,8 @@
 				<i class="fa fa-envelope"></i>
 			</a>
 			{% endif %}
-			<a class="navbar-brand" href="{{ site.base }}/">
-				<img src="{{site.base}}/assets/ikona.png" class="img-circle" />
+			<a class="navbar-brand" href="{{ site.baseurl }}/">
+				<img src="{{site.baseurl}}/assets/ikona.png" class="img-circle" />
 				{{ site.title }}
 			</a>
 		</div>
